# job-template

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  release.yml  test.yml
src/hellbox/jobs/{{name}}/: __init__.py
tests/hellbox/jobs/{{name}}/: test_{{name}}.py
